@@ -48,6 +48,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   normal $wgDBport.
 * The upload link for missing files can now be set separately from the 
   navigation link with $wgUploadMissingFileUrl.
+* $wgCategoryPrefixedDefaultSortkey was removed and is now always false.  This
+  provides more sensible sorting behavior for categories.
 
 === New features in 1.17 ===
 * (bug 10183) Users can now add personal styles and scripts to all skins via
